# jute-parser

./: .gitignore  Cargo.toml  LICENSE-MIT  out.rs  readme.md  test.jute  tree.txt
examples/e2e/: build.rs  cargo.toml  readme.md
examples/e2e/schema/: common.jute  model.jute
examples/e2e/src/: main.rs
jute_test_schema/: test1.jute  test2.jute
proto/: mod.rs
proto/connect/: mod.rs
proto/connect/req/: mod.rs
src/: errors.rs  lib.rs
src/code_generator/: mod.rs  rust.rs
src/code_generator/rust/: mod.rs  utilities.rs  writer.rs
src/compiler/: ast.rs  ast_printer.rs  dependency_resolver.rs  lexer.rs  mod.rs  parser.rs  state_machine.rs  token.rs
tests/: includes.rs  parser.rs  resolver.rs  serialization.rs
tests/includes/invalid/: ambigous.jute  missing_file.jute  mod1.jute  mod2.jute
tests/includes/valid/: base.jute  child.jute
tests/parser/invalid/: recursive.jute  syntax_error.jute  unknown_type.jute
tests/parser/valid/: basic.jute  containers.jute  includes.jute  types.jute
tests/resolver/invalid/: cycle.jute
tests/resolver/valid/: dependency.jute
tests/serialization/: pem.jute  roundtrip.jute
